# gold

./: .gitignore  Price graphs.ipynb  README.md  gold.csv  gold.py  gold.xls  pyproject.toml  requirements.txt  test_gold.py
.ipynb_checkpoints/: Price graphs-checkpoint.ipynb
