[tool.poetry]
name = "gold"
version = "0.1.0"
description = ""
authors = ["Larisa Shigareva <thelarisa81@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.1.4"
matplotlib = "^3.3.3"
requests = "^2.25.0"
pytest = "^6.1.2"
mypy = "^0.790"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
